--- a/index.html
+++ b/index.html
@@ -8,11 +8,11 @@
   <div class="id-card">
       <div class="id-left">
       <img src="Logo Blanc (1).png" alt="ACM Logo" class="logo">
-      <h2>Elaa</h2>
-      <span class="role">ACM Trainer</span>
+      <h2>Ali Lazzem</h2>
+      <span class="role">ACM Member</span>
       <p><strong>University:</strong> Enstab</p>
-      <p style="font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;"><strong>Email:</strong> elfahemlalou@gmail.com</p>
-      <p class="quote">“Kan makhlatech ala l informatique l ACM lik”</p>
+      <p style="font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;"><strong>Email:</strong> alilazzem.per@gmail.com</p>
+      <p class="quote">“le tajri riya7ou bima tala3a l9amar”</p>
     </div>
 
     <div class="id-right">
