--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <body>
   <div class="id-card">
       <div class="id-left">
-      <img src="Logo Blanc (1).png" alt="ACM Logo" class="logo">
+      <img src="Logo.png" alt="ACM Logo" class="logo">
       <h2>Ali Lazzem</h2>
       <span class="role">ACM Member</span>
       <p><strong>University:</strong> Enstab</p>
